mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_match_optional_guard.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Non-exhaustive match: patterns not covering all variants of 'Optional'. Missing: Some
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_match_optional_guard.mux:4:11
   |
 4 |     match x {
   |           ^
